--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,17 @@
-<div class="hero-unit">
-	<h1>Welcome to my site</h1>
-	<p>
-		You've found the home page for the
-		<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-		application.
-	</p>
+<% if user_signed_in? %>
+	<h1> You're logged in! </h1>
 
-	<p>
-		<%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %>
-	</p>
-</div>
+<% else %>
+	<div class="hero-unit">
+		<h1>Welcome to my site</h1>
+		<p>
+			You've found the home page for the
+			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+			application.
+		</p>
+
+		<p>
+			<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
+		</p>
+	</div>
+<% end %>
