--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,5 +1,6 @@
 <% @pins.each do |pin| %>
   <tr>
+    <td><%= image_tag pin.image %></td>
     <td><%= pin.description %></td>
     <td><%= link_to 'Show', pin %></td>
     <% if current_user == pin.user %>
