--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,7 +1,4 @@
-<% if user_signed_in? %>
-	<h1> You're logged in! </h1>
-
-<% else %>
+<% unless user_signed_in? %>
 	<div class="hero-unit">
 		<h1>Welcome to my site</h1>
 		<p>
